--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>description</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -67,7 +68,7 @@
         <ul>
           <li>
             <img
-              src="images/img.jpg"
+              src="./images/img.jpg"
               alt="Product Designer"
               width="264"
               height="260"
@@ -77,7 +78,7 @@
           </li>
           <li>
             <img
-              src="images/img1.jpg"
+              src="./images/img1.jpg"
               alt="Frontend Developer"
               width="264"
               height="260"
@@ -87,7 +88,7 @@
           </li>
           <li>
             <img
-              src="images/img2.jpg"
+              src="./images/img2.jpg"
               alt="Marketing"
               width="264"
               height="260"
@@ -97,7 +98,7 @@
           </li>
           <li>
             <img
-              src="images/img3.jpg"
+              src="./images/img3.jpg"
               alt="UI Designer"
               width="264"
               height="260"
